--- a/style.css
+++ b/style.css
@@ -3,11 +3,9 @@ body.dark-theme {
     --color-background: #30343F;
     --color-panel: #252935;
     --color-input: #5a5d68;
-
     --color-boton: #393e49;
     --color-boton-hover: #4e5565;
     --color-boton-hover-2: #5f626a;
-
     --color-text: #ffffff;
 }
 
@@ -15,10 +13,8 @@ body.light-theme {
     --color-header: #e0e0e0;
     --color-background: #eeeeee;
     --color-panel: #fafafa;
-
     --color-boton: #e0e0e0;
     --color-boton-hover: #bdbdbd;
-
     --color-text: #424242;
 }
 
@@ -67,33 +63,43 @@ i {
 main {
     background-color: var(--color-background);
     display: flex;
-    height: 765px;
+    height: 900px;
     flex-direction: column;
     align-items: center;
 } 
 
 .meme-container {
-    width: 100%;
-    max-width: 600px;
-    background-color: black;
+    width: 600px;
     display: flex;
     flex-direction: column;
 }
 
 .text-meme {
-    height: 62px;
+    height: 80px;
     width: 100%;
     background-color: white;
     color: black;
     font-size: 50px;
-    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     font-weight: bold;
 }
 
 .meme-container-img {
-    height: 386px;
+    height: 500px;
+    width: 100%; 
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: black;
+}
+
+#img-meme {
     width: 100%;
+    height: 100%;
+    display: none;
 }
 
 .button-download {
