--- a/style.css
+++ b/style.css
@@ -63,20 +63,21 @@ i {
 main {
     background-color: var(--color-background);
     display: flex;
-    height: 900px;
+    height: 1000px;
     flex-direction: column;
     align-items: center;
 } 
 
 .meme-container {
     width: 600px;
+    height: 600px;
     display: flex;
     flex-direction: column;
     background-color: black;
+    position: relative;
 }
 
 .text-meme {
-    height: 80px;
     width: 100%;
     background-color: white;
     color: black;
@@ -86,8 +87,10 @@ main {
     justify-content: center;
     font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     font-weight: bold;
-    padding-left: 10px;
-    padding-right: 10px;
+    padding: 35px;
+    box-sizing: border-box;
+    margin: 0;
+    position: relative;
 }
 
 .meme-container-img {
@@ -97,6 +100,7 @@ main {
     justify-content: center;
     align-items: center;
     background-color: black;
+    flex-grow: 1;
 }
 
 #img-meme {
